force-app/main/default/objects/Sync_Error__c/Sync_Error__c.object-meta.xml
<CustomObject>
    <label>Sync Error</label>
    <nameField>
        <displayFormat>SE-{00000}</displayFormat>
        <label>Sync Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>