force-app/main/default/objects/Sync_Error__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <label>Record</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>