force-app/main/default/objects/Sync_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resolution_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Business_Central_Id__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>